<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="false"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/animation" />

    <Button
        android:id="@+id/remove_button"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="#FBC02D"
        android:text="@string/remove"
        android:textColor="#6D4C41"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pour_out_button" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="#388E3C"
        android:text="@string/add"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pour_out_button" />

    <Button
        android:id="@+id/pour_out_button"
        android:layout_width="122dp"
        android:layout_height="67dp"
        android:backgroundTint="#C62828"
        android:text="@string/pour_out"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animationView" />

</androidx.constraintlayout.widget.ConstraintLayout>